# present_bot

./: .coverage 2  .coverage 3  .coverage 4  .coverage 5  .dockerignore  .env 2  .env.backup  .env.test  .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  BOT_FIX_REPORT.md  BOT_FIX_SUMMARY.md  BOT_STARTUP_REPORT.md  BOT_TESTING_REPORT.md  CALLBACK_FIX_REPORT.md  CHANGELOG.md  CI_CD_FIX_REPORT.md  CODE_QUALITY_AUDIT_REPORT.md  CODE_REVIEW_CHECKLIST.md  COMPREHENSIVE_PROJECT_AUDIT_REPORT.md  COMPREHENSIVE_TESTING_REPORT.md  CONTEXT7_ANALYSIS_REPORT.md  CONTEXT7_FINAL_AUDIT_REPORT.md  CONTEXT7_FINAL_STATUS.md  CONTEXT7_IMPLEMENTATION_REPORT.md  CONTEXT7_SUMMARY.md  CSRF_MIDDLEWARE_FIX_REPORT.md  DATABASE_SETUP.md  DEMO_DATA.md  DEMO_DATA_IMPLEMENTATION.md  DEPENDENCIES_FIX.md  DEPENDENCIES_FIX_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY_REPORT.md  DEPLOYMENT_SUMMARY.md  DEVOPS_GUIDE.md  DEVOPS_IMPLEMENTATION_REPORT.md  (+81 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_update_notes_table.py
alertmanager/: alertmanager.yml  performance_alerts.yml
app/: __init__.py  bot.py  config.py  health.py  roles.py
app/db/: __init__.py  base.py  broadcast.py  enums.py  media_request.py  note.py  notification.py  psych_request.py  session.py  task.py  ticket.py  user.py
app/handlers/: admin.py  director.py  intro.py  notifications.py  onboarding.py  psych.py  student.py  teacher.py  theme.py  tour.py
app/i18n/: __init__.py  en.toml  ru.toml
app/keyboards/: director.py  main_menu.py  onboarding.py
app/middlewares/: audit.py  csrf.py  loading.py  locale.py  metrics.py  rate_limit.py  sentry_context.py  ux.py
app/repositories/: __init__.py  media_repo.py  note_repo.py  optimized_user_repo.py  psych_repo.py  stats_repo.py  task_repo.py  ticket_repo.py  user_repo.py
app/routes/: __init__.py  admin.py  director.py  docs.py  help.py  interactions.py  intro.py  onboarding.py  parent.py  psych.py  student.py  teacher.py  theme.py  tour.py
app/schemas/: news.py  ticket.py
app/services/: cache_service.py  command_service.py  feedback_service.py  limiter.py  news_parser.py  notification_service.py  notifier.py  onboarding_service.py  pdf_factory.py  performance_monitor.py  scheduler.py
app/utils/: csrf.py  hash.py  sentry.py
grafana/provisioning/dashboards/: dashboards.yml  kpi_tasks.json  performance_dashboard.json  schoolbot.json
grafana/provisioning/datasources/: prometheus.yml
migrations/: env.py
migrations/versions/: 001_update_notes_table.py  002_add_task_deadline.py  003_add_user_theme.py  004_enable_rls.py  005_add_indexes.py  006_add_seen_intro.py  007_optimize_performance_indexes.py
prometheus/: prometheus.yml  rules.yml
scripts/: audit_system.py  backup.sh  backup_db.sh  check_deployment_readiness.py  check_server_requirements.sh  deploy.sh  deploy_to_server.sh  fix_dependencies.sh  init_db.sh  init_demo.py  init_glitchtip.sh  init_monitoring.sh  init_sentry.sh  install_production.sh  load_test.py  maintenance.sh  monitor.sh  production_checklist.sh  quick_start.sh  restore.sh  rollback.sh  run_migrations.sh  run_performance_tests.py  scale.sh  server_check.sh  server_setup.sh  setup_performance.py  setup_quality.sh  update_all_bots.sh  validate_env.sh  wait_db.py
sql/: 01_init_schema.sql  02_demo_data.sql  README.md
systemd/: schoolbot.service
tests/: test_add_note.py  test_basic.py  test_business_logic.py  test_config_security.py  test_db_connection.py  test_docs_and_news.py  test_docs_and_news_fixed.py  test_edge_cases.py  test_error_handling.py  test_health.py  test_help_system.py  test_integration.py  test_intro.py  test_kpi_metrics.py  test_localization.py  test_onboarding.py  test_onboarding_simple.py  test_performance.py  test_performance_optimization.py  test_roles_and_access.py  test_security.py  test_security_comprehensive.py  test_simple.py  test_tour.py  test_xss_protection.py
